# wgc_recorder

./: Cargo.toml  README.md
src/: bitrate.rs  capture_item.rs  frame_generator.rs  framerate.rs  lib.rs  resolution.rs  sample_generator.rs  tests.rs  utils.rs  video_encoder.rs
